unpackaged/main/default/objects/Trigger_Switch__mdt/Trigger_Switch__mdt.object-meta.xml
<CustomObject>
    <description>This metadata type is used for implementing a switch for triggers. Developed during Corp Accounts architectural changes but can be used for any object</description>
    <label>Trigger Switch</label>
    <pluralLabel>Trigger Switches</pluralLabel>
</CustomObject>