unpackaged/main/default/objects/Trigger_Switch__mdt/fields/Dataload_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Dataload_Profiles__c</fullName>
    <inlineHelpText>If you want to allow only certain profiles which can do a bulk dataload, enter the profile id here else leave it blank. Leaving it blank means any profile with correct permissions can do a dataload for this object.</inlineHelpText>
    <label>Dataload Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>