unpackaged/main/default/objects/Trigger_Switch__mdt/fields/Global_Switch__c.field-meta.xml
<CustomField>
    <fullName>Global_Switch__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck the checkbox any time when the trigger should not be performing any of the operations or calling any handlers. Remember, if you keep it unchecked, the trigger for that object will be ineffective.</inlineHelpText>
    <label>Global Switch</label>
    <type>Checkbox</type>
</CustomField>