unpackaged/main/default/objects/Trigger_Switch__mdt/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <inlineHelpText>Enter Correct Api Name of the Trigger Name for which the trigger switch is being implemented</inlineHelpText>
    <label>Trigger Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>